--- a/sys/cache.ini
+++ b/sys/cache.ini
@@ -1,6 +1,6 @@
 [example]
-timestamp=1376050226
-current=0
-slots=26
-motd= KachalovCRAFT NET Temporary
+timestamp=1376329543
+current=
+slots=
+motd=
 
