--- a/sys/config.ini
+++ b/sys/config.ini
@@ -10,14 +10,16 @@ color=243,179,27
 ;Первое число - процент, после которого статус бар станет оранжевым, второе - бар станет красным
 precent_border=33,66
 ;Если сервер недоступен, то будет выведен этот текст
-if_server_off=OFF
+if_server_off='OFF'
 ;Время в секундах, через которое соединение будет разорвано
 timeout=0.9
 ;Время в секундах, которое информация о сервере будет браться из кеша
-cachelife=45
+cachelife=0
 ;Тип запроса: socket(требуется поддержка сокетов, минимум информации),eo(требуется БД и установка плагина EndlessOnline)
-;oe режим пока не используйте, т.к. он находится в стадии разработки и может предоставлять угрозу Вашей БД
+;eo режим пока не используйте, т.к. он находится в стадии разработки и может предоставлять угрозу Вашей БД
 type=socket
+;Размер картинки
+size=100
 
 [sql]
 host=127.0.0.1
